parser/RtypeParser.js
// Generated from Rtype.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var RtypeListener = require('./RtypeListener').RtypeListener;
var grammarFileName = "Rtype.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'interface'", "':'", "'{'", "'}'", "'('", "')'", 
                     "'=>'", "'?'", "','", "'...'", "'='", "'requires'", 
                     "'throws'", "'['", "']'", "'|'", "';'", "'TODO'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      "ReservedWord", "RegexpLiteral", "BuiltinType", "Identifier", 
                      "Whitespace" ];

var ruleNames =  [ "file", "minimalInterface", "nonMinimalInterface", "functionInterface", 
                   "functionSignature", "objectProperties", "functionSignatures", 
                   "parameters", "valueExpressions", "destructuredObject", 
                   "objectProperty", "objectSpreadProperty", "parameter", 
                   "namedParameter", "defaultValue", "spreadParameter", 
                   "functionTrailer", "type", "literalType", "predicateLiteral", 
                   "valueExpression" ];

function RtypeParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

RtypeParser.prototype = Object.create(antlr4.Parser.prototype);
RtypeParser.prototype.constructor = RtypeParser;

Object.defineProperty(RtypeParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

RtypeParser.EOF = antlr4.Token.EOF;
RtypeParser.T__0 = 1;
RtypeParser.T__1 = 2;
RtypeParser.T__2 = 3;
RtypeParser.T__3 = 4;
RtypeParser.T__4 = 5;
RtypeParser.T__5 = 6;
RtypeParser.T__6 = 7;
RtypeParser.T__7 = 8;
RtypeParser.T__8 = 9;
RtypeParser.T__9 = 10;
RtypeParser.T__10 = 11;
RtypeParser.T__11 = 12;
RtypeParser.T__12 = 13;
RtypeParser.T__13 = 14;
RtypeParser.T__14 = 15;
RtypeParser.T__15 = 16;
RtypeParser.T__16 = 17;
RtypeParser.ReservedWord = 18;
RtypeParser.RegexpLiteral = 19;
RtypeParser.BuiltinType = 20;
RtypeParser.Identifier = 21;
RtypeParser.Whitespace = 22;

RtypeParser.RULE_file = 0;
RtypeParser.RULE_minimalInterface = 1;
RtypeParser.RULE_nonMinimalInterface = 2;
RtypeParser.RULE_functionInterface = 3;
RtypeParser.RULE_functionSignature = 4;
RtypeParser.RULE_objectProperties = 5;
RtypeParser.RULE_functionSignatures = 6;
RtypeParser.RULE_parameters = 7;
RtypeParser.RULE_valueExpressions = 8;
RtypeParser.RULE_destructuredObject = 9;
RtypeParser.RULE_objectProperty = 10;
RtypeParser.RULE_objectSpreadProperty = 11;
RtypeParser.RULE_parameter = 12;
RtypeParser.RULE_namedParameter = 13;
RtypeParser.RULE_defaultValue = 14;
RtypeParser.RULE_spreadParameter = 15;
RtypeParser.RULE_functionTrailer = 16;
RtypeParser.RULE_type = 17;
RtypeParser.RULE_literalType = 18;
RtypeParser.RULE_predicateLiteral = 19;
RtypeParser.RULE_valueExpression = 20;

function FileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RtypeParser.RULE_file;
    return this;
}

FileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FileContext.prototype.constructor = FileContext;

FileContext.prototype.minimalInterface = function() {
    return this.getTypedRuleContext(MinimalInterfaceContext,0);
};

FileContext.prototype.nonMinimalInterface = function() {
    return this.getTypedRuleContext(NonMinimalInterfaceContext,0);
};

FileContext.prototype.functionInterface = function() {
    return this.getTypedRuleContext(FunctionInterfaceContext,0);
};

FileContext.prototype.functionSignature = function() {
    return this.getTypedRuleContext(FunctionSignatureContext,0);
};

FileContext.prototype.enterRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.enterFile(this);
	}
};

FileContext.prototype.exitRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.exitFile(this);
	}
};




RtypeParser.FileContext = FileContext;

RtypeParser.prototype.file = function() {

    var localctx = new FileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, RtypeParser.RULE_file);
    try {
        this.state = 46;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 42;
            this.minimalInterface();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 43;
            this.nonMinimalInterface();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 44;
            this.functionInterface();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 45;
            this.functionSignature();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MinimalInterfaceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RtypeParser.RULE_minimalInterface;
    return this;
}

MinimalInterfaceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MinimalInterfaceContext.prototype.constructor = MinimalInterfaceContext;

MinimalInterfaceContext.prototype.Identifier = function() {
    return this.getToken(RtypeParser.Identifier, 0);
};

MinimalInterfaceContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

MinimalInterfaceContext.prototype.predicateLiteral = function() {
    return this.getTypedRuleContext(PredicateLiteralContext,0);
};

MinimalInterfaceContext.prototype.enterRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.enterMinimalInterface(this);
	}
};

MinimalInterfaceContext.prototype.exitRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.exitMinimalInterface(this);
	}
};




RtypeParser.MinimalInterfaceContext = MinimalInterfaceContext;

RtypeParser.prototype.minimalInterface = function() {

    var localctx = new MinimalInterfaceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, RtypeParser.RULE_minimalInterface);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 48;
        this.match(RtypeParser.T__0);
        this.state = 49;
        this.match(RtypeParser.Identifier);
        this.state = 53;
        switch(this._input.LA(1)) {
        case RtypeParser.T__1:
            this.state = 50;
            this.match(RtypeParser.T__1);
            this.state = 51;
            this.type(0);
            break;
        case RtypeParser.ReservedWord:
            this.state = 52;
            this.predicateLiteral();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NonMinimalInterfaceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RtypeParser.RULE_nonMinimalInterface;
    return this;
}

NonMinimalInterfaceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NonMinimalInterfaceContext.prototype.constructor = NonMinimalInterfaceContext;

NonMinimalInterfaceContext.prototype.Identifier = function() {
    return this.getToken(RtypeParser.Identifier, 0);
};

NonMinimalInterfaceContext.prototype.objectProperties = function() {
    return this.getTypedRuleContext(ObjectPropertiesContext,0);
};

NonMinimalInterfaceContext.prototype.predicateLiteral = function() {
    return this.getTypedRuleContext(PredicateLiteralContext,0);
};

NonMinimalInterfaceContext.prototype.enterRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.enterNonMinimalInterface(this);
	}
};

NonMinimalInterfaceContext.prototype.exitRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.exitNonMinimalInterface(this);
	}
};




RtypeParser.NonMinimalInterfaceContext = NonMinimalInterfaceContext;

RtypeParser.prototype.nonMinimalInterface = function() {

    var localctx = new NonMinimalInterfaceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, RtypeParser.RULE_nonMinimalInterface);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 55;
        this.match(RtypeParser.T__0);
        this.state = 56;
        this.match(RtypeParser.Identifier);
        this.state = 71;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            this.state = 58;
            _la = this._input.LA(1);
            if(_la===RtypeParser.ReservedWord) {
                this.state = 57;
                this.predicateLiteral();
            }

            this.state = 60;
            this.match(RtypeParser.T__2);
            this.state = 61;
            this.objectProperties();
            this.state = 62;
            this.match(RtypeParser.T__3);
            break;

        case 2:
            this.state = 64;
            this.predicateLiteral();
            this.state = 69;
            _la = this._input.LA(1);
            if(_la===RtypeParser.T__2) {
                this.state = 65;
                this.match(RtypeParser.T__2);
                this.state = 66;
                this.objectProperties();
                this.state = 67;
                this.match(RtypeParser.T__3);
            }

            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FunctionInterfaceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RtypeParser.RULE_functionInterface;
    return this;
}

FunctionInterfaceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FunctionInterfaceContext.prototype.constructor = FunctionInterfaceContext;

FunctionInterfaceContext.prototype.Identifier = function() {
    return this.getToken(RtypeParser.Identifier, 0);
};

FunctionInterfaceContext.prototype.functionSignatures = function() {
    return this.getTypedRuleContext(FunctionSignaturesContext,0);
};

FunctionInterfaceContext.prototype.enterRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.enterFunctionInterface(this);
	}
};

FunctionInterfaceContext.prototype.exitRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.exitFunctionInterface(this);
	}
};




RtypeParser.FunctionInterfaceContext = FunctionInterfaceContext;

RtypeParser.prototype.functionInterface = function() {

    var localctx = new FunctionInterfaceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, RtypeParser.RULE_functionInterface);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 73;
        this.match(RtypeParser.T__0);
        this.state = 74;
        this.match(RtypeParser.Identifier);
        this.state = 75;
        this.match(RtypeParser.T__2);
        this.state = 76;
        this.functionSignatures();
        this.state = 77;
        this.match(RtypeParser.T__3);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FunctionSignatureContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RtypeParser.RULE_functionSignature;
    return this;
}

FunctionSignatureContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FunctionSignatureContext.prototype.constructor = FunctionSignatureContext;

FunctionSignatureContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

FunctionSignatureContext.prototype.Identifier = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(RtypeParser.Identifier);
    } else {
        return this.getToken(RtypeParser.Identifier, i);
    }
};


FunctionSignatureContext.prototype.parameters = function() {
    return this.getTypedRuleContext(ParametersContext,0);
};

FunctionSignatureContext.prototype.functionTrailer = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FunctionTrailerContext);
    } else {
        return this.getTypedRuleContext(FunctionTrailerContext,i);
    }
};

FunctionSignatureContext.prototype.enterRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.enterFunctionSignature(this);
	}
};

FunctionSignatureContext.prototype.exitRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.exitFunctionSignature(this);
	}
};




RtypeParser.FunctionSignatureContext = FunctionSignatureContext;

RtypeParser.prototype.functionSignature = function() {

    var localctx = new FunctionSignatureContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, RtypeParser.RULE_functionSignature);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 80;
        _la = this._input.LA(1);
        if(_la===RtypeParser.Identifier) {
            this.state = 79;
            this.match(RtypeParser.Identifier);
        }

        this.state = 82;
        this.match(RtypeParser.T__4);
        this.state = 84;
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << RtypeParser.T__2) | (1 << RtypeParser.T__9) | (1 << RtypeParser.ReservedWord) | (1 << RtypeParser.RegexpLiteral) | (1 << RtypeParser.BuiltinType) | (1 << RtypeParser.Identifier))) !== 0)) {
            this.state = 83;
            this.parameters();
        }

        this.state = 86;
        this.match(RtypeParser.T__5);
        this.state = 87;
        this.match(RtypeParser.T__6);
        this.state = 93;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
        if(la_===1) {
            this.state = 88;
            this.match(RtypeParser.Identifier);
            this.state = 90;
            _la = this._input.LA(1);
            if(_la===RtypeParser.T__7) {
                this.state = 89;
                this.match(RtypeParser.T__7);
            }

            this.state = 92;
            this.match(RtypeParser.T__1);

        }
        this.state = 95;
        this.type(0);
        this.state = 102;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,10,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 97;
                _la = this._input.LA(1);
                if(_la===RtypeParser.T__8) {
                    this.state = 96;
                    this.match(RtypeParser.T__8);
                }

                this.state = 99;
                this.functionTrailer(); 
            }
            this.state = 104;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,10,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ObjectPropertiesContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RtypeParser.RULE_objectProperties;
    return this;
}

ObjectPropertiesContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ObjectPropertiesContext.prototype.constructor = ObjectPropertiesContext;

ObjectPropertiesContext.prototype.objectProperty = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ObjectPropertyContext);
    } else {
        return this.getTypedRuleContext(ObjectPropertyContext,i);
    }
};

ObjectPropertiesContext.prototype.enterRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.enterObjectProperties(this);
	}
};

ObjectPropertiesContext.prototype.exitRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.exitObjectProperties(this);
	}
};




RtypeParser.ObjectPropertiesContext = ObjectPropertiesContext;

RtypeParser.prototype.objectProperties = function() {

    var localctx = new ObjectPropertiesContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, RtypeParser.RULE_objectProperties);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 105;
        this.objectProperty();
        this.state = 110;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===RtypeParser.T__8) {
            this.state = 106;
            this.match(RtypeParser.T__8);
            this.state = 107;
            this.objectProperty();
            this.state = 112;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FunctionSignaturesContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RtypeParser.RULE_functionSignatures;
    return this;
}

FunctionSignaturesContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FunctionSignaturesContext.prototype.constructor = FunctionSignaturesContext;

FunctionSignaturesContext.prototype.functionSignature = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FunctionSignatureContext);
    } else {
        return this.getTypedRuleContext(FunctionSignatureContext,i);
    }
};

FunctionSignaturesContext.prototype.enterRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.enterFunctionSignatures(this);
	}
};

FunctionSignaturesContext.prototype.exitRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.exitFunctionSignatures(this);
	}
};




RtypeParser.FunctionSignaturesContext = FunctionSignaturesContext;

RtypeParser.prototype.functionSignatures = function() {

    var localctx = new FunctionSignaturesContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, RtypeParser.RULE_functionSignatures);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 113;
        this.functionSignature();
        this.state = 118;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===RtypeParser.T__8) {
            this.state = 114;
            this.match(RtypeParser.T__8);
            this.state = 115;
            this.functionSignature();
            this.state = 120;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ParametersContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RtypeParser.RULE_parameters;
    return this;
}

ParametersContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParametersContext.prototype.constructor = ParametersContext;

ParametersContext.prototype.spreadParameter = function() {
    return this.getTypedRuleContext(SpreadParameterContext,0);
};

ParametersContext.prototype.parameter = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ParameterContext);
    } else {
        return this.getTypedRuleContext(ParameterContext,i);
    }
};

ParametersContext.prototype.enterRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.enterParameters(this);
	}
};

ParametersContext.prototype.exitRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.exitParameters(this);
	}
};




RtypeParser.ParametersContext = ParametersContext;

RtypeParser.prototype.parameters = function() {

    var localctx = new ParametersContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, RtypeParser.RULE_parameters);
    var _la = 0; // Token type
    try {
        this.state = 134;
        switch(this._input.LA(1)) {
        case RtypeParser.T__9:
            this.enterOuterAlt(localctx, 1);
            this.state = 121;
            this.spreadParameter();
            break;
        case RtypeParser.T__2:
        case RtypeParser.ReservedWord:
        case RtypeParser.RegexpLiteral:
        case RtypeParser.BuiltinType:
        case RtypeParser.Identifier:
            this.enterOuterAlt(localctx, 2);
            this.state = 122;
            this.parameter();
            this.state = 127;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                if(_alt===1) {
                    this.state = 123;
                    this.match(RtypeParser.T__8);
                    this.state = 124;
                    this.parameter(); 
                }
                this.state = 129;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
            }

            this.state = 132;
            _la = this._input.LA(1);
            if(_la===RtypeParser.T__8) {
                this.state = 130;
                this.match(RtypeParser.T__8);
                this.state = 131;
                this.spreadParameter();
            }

            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ValueExpressionsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RtypeParser.RULE_valueExpressions;
    return this;
}

ValueExpressionsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ValueExpressionsContext.prototype.constructor = ValueExpressionsContext;

ValueExpressionsContext.prototype.valueExpression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ValueExpressionContext);
    } else {
        return this.getTypedRuleContext(ValueExpressionContext,i);
    }
};

ValueExpressionsContext.prototype.enterRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.enterValueExpressions(this);
	}
};

ValueExpressionsContext.prototype.exitRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.exitValueExpressions(this);
	}
};




RtypeParser.ValueExpressionsContext = ValueExpressionsContext;

RtypeParser.prototype.valueExpressions = function() {

    var localctx = new ValueExpressionsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, RtypeParser.RULE_valueExpressions);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 136;
        this.valueExpression();
        this.state = 141;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,16,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 137;
                this.match(RtypeParser.T__8);
                this.state = 138;
                this.valueExpression(); 
            }
            this.state = 143;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,16,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DestructuredObjectContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RtypeParser.RULE_destructuredObject;
    return this;
}

DestructuredObjectContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DestructuredObjectContext.prototype.constructor = DestructuredObjectContext;

DestructuredObjectContext.prototype.objectProperties = function() {
    return this.getTypedRuleContext(ObjectPropertiesContext,0);
};

DestructuredObjectContext.prototype.enterRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.enterDestructuredObject(this);
	}
};

DestructuredObjectContext.prototype.exitRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.exitDestructuredObject(this);
	}
};




RtypeParser.DestructuredObjectContext = DestructuredObjectContext;

RtypeParser.prototype.destructuredObject = function() {

    var localctx = new DestructuredObjectContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, RtypeParser.RULE_destructuredObject);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 144;
        this.match(RtypeParser.T__2);
        this.state = 145;
        this.objectProperties();
        this.state = 146;
        this.match(RtypeParser.T__3);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ObjectPropertyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RtypeParser.RULE_objectProperty;
    return this;
}

ObjectPropertyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ObjectPropertyContext.prototype.constructor = ObjectPropertyContext;

ObjectPropertyContext.prototype.parameter = function() {
    return this.getTypedRuleContext(ParameterContext,0);
};

ObjectPropertyContext.prototype.objectSpreadProperty = function() {
    return this.getTypedRuleContext(ObjectSpreadPropertyContext,0);
};

ObjectPropertyContext.prototype.enterRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.enterObjectProperty(this);
	}
};

ObjectPropertyContext.prototype.exitRule = function(listener) {
    if(listener instanceof RtypeListener ) {
        listener.exitObjectProperty(this);
	}
};




RtypeParser.ObjectPropertyContext = ObjectPropertyContext;

RtypeParser.prototype.objectProperty = function() {
